--- a/style.css
+++ b/style.css
@@ -607,7 +607,7 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
 --------------------------------------------------------------*/
 #about {
-  background: url("about.png")no-repeat center center fixed;
+  background: url("about.png");
   background-size: cover;
   overflow: hidden;
   position: relative;
